--- a/WinFormsApp1/Page2.resx
+++ b/WinFormsApp1/Page2.resx
@@ -511,4 +511,7 @@
         rkJggg==
 </value>
   </data>
+  <metadata name="timerShuffle.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
